refactor(app): :art: Make database class and ability to specify database and settings location
- Removed direct database function calls in various widget files and replaced them with calls to self.manager.database. - Deleted test_create_user_screen.py as it was no longer needed. - Added new test_create_user.py to cover user creation functionality with async tests. - Updated requirements-dev.txt to include pytest-cov and pytest-asyncio for improved testing capabilities. - Created __init__.py in GuiApp directory to facilitate package imports.

--- a/GuiApp/kv/createUserScreen.kv
+++ b/GuiApp/kv/createUserScreen.kv
@@ -62,11 +62,12 @@
                 size_hint: (1, None)
                 height: 100
             OrangeButton:
+                id: cancelButton
                 text: "Cancel"
                 width: self.parent.width / 3
                 height: self.width / 3
                 text_size: self.height / 2
-                on_press: root.cancel()
+                on_release: root.cancel()
             Widget: # Horizontal Spacer
                 size_hint: (1, None)
                 height: 100
@@ -75,7 +76,7 @@
                 width: self.parent.width / 3
                 height: self.width / 3
                 text_size: self.height / 2
-                on_press: root.registerUser()
+                on_release: root.registerUser()
             Widget: # Horizontal Spacer
                 size_hint: (1, None)
                 height: 100
