test(app): :white_check_mark: Expand tests for create user and logging in

--- a/GuiApp/kv/createUserOrLinkCardPopup.kv
+++ b/GuiApp/kv/createUserOrLinkCardPopup.kv
@@ -46,6 +46,7 @@
                     height: self.minimum_height
                     Widget: # Horizontal Spacer
                     GreenButton:
+                        id: createUserButton
                         width: self.parent.width / 2
                         height: self.width / 3
                         text_size: self.height / 2
@@ -93,6 +94,7 @@
                     height: self.minimum_height
                     Widget: # Horizontal Spacer
                     GreenButton:
+                        id: linkCardButton
                         width: self.parent.width / 2
                         height: self.width / 3
                         text_size: self.height / 2
