--- a/GuiApp/kv/loginScreen.kv
+++ b/GuiApp/kv/loginScreen.kv
@@ -4,6 +4,7 @@
     size_hint_x: None
     width: self.height
     ClickableRoundedTwoColorGridLayout:
+        id: clickableLayout
         rows: 1
         on_press: root.Clicked()
         Label:
