test(test): :white_check_mark: Add top up auto tests

--- a/GuiApp/kv/topUpAmountScreen.kv
+++ b/GuiApp/kv/topUpAmountScreen.kv
@@ -122,6 +122,7 @@
                 size_hint: (1, None)
                 height: 100
             OrangeButton:
+                id: cancelButton
                 text: "Cancel"
                 width: self.parent.width / 4
                 height: self.width / 3
@@ -131,6 +132,7 @@
                 size_hint: (1, None)
                 height: 100
             GreenButton:
+                id: continueButton
                 text: "Continue"
                 width: self.parent.width / 4
                 height: self.width / 3
