--- a/GuiApp/kv/buyScreen.kv
+++ b/GuiApp/kv/buyScreen.kv
@@ -78,6 +78,7 @@
                 size_hint: (0.5, None)
                 height: self.minimum_height
                 OrangeButton:
+                    id: cancelButton
                     text: "Cancel"
                     width: self.parent.width / 2.5
                     height: self.width / 3
@@ -85,6 +86,7 @@
                     on_press: root.onCancel()
                 Widget: # Horizontal Spacer
                 GreenButton:
+                    id: buyButton
                     text: "Buy"
                     width: self.parent.width / 2.5
                     height: self.width / 3
