--- a/GuiApp/kv/insufficientFundsPopup.kv
+++ b/GuiApp/kv/insufficientFundsPopup.kv
@@ -33,6 +33,7 @@
             size_hint: (1, None)
             height: self.minimum_height
             OrangeButton:
+                id: closeButton
                 text: "Close"
                 width: self.parent.width / 2.5
                 height: self.width / 3
@@ -40,6 +41,7 @@
                 on_press: root.on_close()
             Widget: # Horizontal Spacer
             GreenButton:
+                id: topUpButton
                 text: "Top-up now"
                 width: self.parent.width / 2.5
                 height: self.width / 3
