--- a/GuiApp/kv/topUpPaymentScreen.kv
+++ b/GuiApp/kv/topUpPaymentScreen.kv
@@ -63,6 +63,7 @@
                 size_hint: (1, None)
                 height: self.minimum_height
                 OrangeButton:
+                    id: cancelButton
                     width: self.parent.width / 2.5
                     height: self.width / 3
                     text_size: self.height / 2
@@ -72,6 +73,7 @@
                     size_hint: (1, None)
                     height: 10
                 GreenButton:
+                    id: confirmButton
                     width: self.parent.width / 2.5
                     height: self.width / 3
                     text_size: self.height / 2
