chore: Code improvements and fixes
Includes various code improvements:
- Updated test configurations
- Profile screen improvements
- Create user screen updates
- Custom screen manager enhancements
- Main user screen improvements
- Settings manager updates
- Splash screen refinements
- Top up payment screen updates
- Navigation header improvements
- README updates
- Workflow and gitignore updates

--- a/GuiApp/kv/ProfileScreen.kv
+++ b/GuiApp/kv/ProfileScreen.kv
@@ -9,6 +9,10 @@
     image_path: 'Images/chart-histogram.png'
     text: 'Statistics'
 
+<ChangePinOption>:
+    image_path: 'Images/wrench-alt.png'
+    text: 'Change PIN'
+
 
 <ProfileScreen>:
     rows: 2
@@ -19,6 +23,7 @@
         page_name: "Profile"
     GridLayout:
         id: optionsGrid
+        cols: 3
         rows: 1
         canvas:
             Color:
@@ -32,3 +37,5 @@
             id: historyOption
         StatisticsOption:
             id: statisticsOption
+        ChangePinOption:
+            id: changePinOption
