--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -41,5 +41,10 @@
 #:include kv/UserStatisticsScreen.kv
 #:include kv/removeConfirmationPopup.kv
 #:include kv/StoreStatisticsScreen.kv
+#:include kv/salesHistoryScreen.kv
 #:include kv/removalReasonPopup.kv
 #:include kv/addedSnackPricePopup.kv
+#:include kv/pinEntryPopup.kv
+#:include kv/adminPinEntryPopup.kv
+#:include kv/changePinPopup.kv
+#:include kv/lowInventoryAlertPopup.kv
