--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -29,6 +29,7 @@
 #:include kv/uiElements/ParticleEmitter.kv
 #:include kv/uiElements/navigationHeader.kv
 #:include kv/uiElements/StatsWidgets.kv
+#:include kv/uiElements/labels.kv
 #:include kv/editSystemSettingsScreen.kv
 #:include kv/insufficientFundsPopup.kv
 #:include kv/createUserOrLinkCardPopup.kv
