feat(app): :sparkles: Add selectable items for gambling

--- a/GuiApp/kv/wheelOfSnacksScreen.kv
+++ b/GuiApp/kv/wheelOfSnacksScreen.kv
@@ -28,6 +28,7 @@
                     entryHeight: self.width / (10)
                     columns: ["Snack name", "Value"]
                     columnExamples: ["Long name", "14.99%"]
+                    onEntryPressed: root.item_clicked
                 Widget:
                     size_hint_x: 0.1
             Widget:
