--- a/GuiApp/kv/addedSnackPricePopup.kv
+++ b/GuiApp/kv/addedSnackPricePopup.kv
@@ -43,6 +43,7 @@
             height: self.minimum_height
             Widget: # Horizontal Spacer
             OrangeButton:
+                id: cancelButton
                 text: "Cancel"
                 width: self.parent.width / 4
                 height: self.width / 3
@@ -50,6 +51,7 @@
                 on_press: root.cancel_button_pressed()
             Widget: # Horizontal Spacer
             GreenButton:
+                id: confirmButton
                 text: "Confirm"
                 width: self.parent.width / 4
                 height: self.width / 3
