--- a/GuiApp/kv/editSnackScreen.kv
+++ b/GuiApp/kv/editSnackScreen.kv
@@ -52,6 +52,7 @@
             height: self.minimum_height
             Widget: # Horizontal Spacer
             RedButton:
+                id: removeButton
                 text: "Remove"
                 width: self.parent.width / 4
                 height: self.width / 3
@@ -59,6 +60,7 @@
                 on_press: root.onRemove()
             Widget: # Horizontal Spacer
             OrangeButton:
+                id: cancelButton
                 text: "Cancel"
                 width: self.parent.width / 4
                 height: self.width / 3
@@ -66,6 +68,7 @@
                 on_press: root.onCancel()
             Widget: # Horizontal Spacer
             GreenButton:
+                id: confirmButton
                 text: "Confirm"
                 width: self.parent.width / 4
                 height: self.width / 3
