--- a/GuiApp/kv/removalReasonPopup.kv
+++ b/GuiApp/kv/removalReasonPopup.kv
@@ -24,6 +24,7 @@
             size_hint: (1, None)
             height: self.minimum_height
             RedButton:
+                id: stolenButton
                 text: "Stolen"
                 width: self.parent.width / 4
                 height: self.width / 3
@@ -31,6 +32,7 @@
                 on_press: root.stolen_button_pressed()
             Widget: # Horizontal Spacer
             RedButton:
+                id: expiredButton
                 text: "Expired"
                 width: self.parent.width / 4
                 height: self.width / 3
@@ -38,6 +40,7 @@
                 on_press: root.expired_button_pressed()
             Widget: # Horizontal Spacer
             RedButton:
+                id: damagedButton
                 text: "Damaged"
                 width: self.parent.width / 4
                 height: self.width / 3
@@ -49,6 +52,7 @@
             size_hint: (1, None)
             height: self.minimum_height
             OrangeButton:
+                id: cancelButton
                 text: "Cancel"
                 width: self.parent.width / 4
                 height: self.width / 3
